added pytest to requiremnets.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 bcrypt==4.2.0
 blinker==1.8.2
 click==8.1.7
+exceptiongroup==1.2.2
 Flask==3.0.3
 Flask-Cors==5.0.0
 Flask-JWT-Extended==4.6.0
 Flask-MySQLdb==2.0.0
 gunicorn==23.0.0
 importlib_metadata==8.5.0
+iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
@@ -14,10 +16,13 @@ mysqlclient==2.2.4
 numpy==1.24.4
 packaging==24.1
 pandas==2.0.3
+pluggy==1.5.0
 PyJWT==2.9.0
+pytest==8.3.3
 python-dateutil==2.9.0.post0
 pytz==2024.2
 six==1.16.0
+tomli==2.0.1
 tzdata==2024.2
 Werkzeug==3.0.4
 zipp==3.20.2
