--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,4 +33,5 @@ jobs:
       - name: Run Tests
         run: |
           source venv/bin/activate
+          export PYTHONPATH=$PYTHONPATH:./src
           pytest tests/
