--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aniso8601==9.0.1
 bcrypt==4.2.0
 blinker==1.8.2
 click==8.1.7
@@ -6,6 +7,8 @@ Flask==3.0.3
 Flask-Cors==5.0.0
 Flask-JWT-Extended==4.6.0
 Flask-MySQLdb==2.0.0
+Flask-RESTful==0.3.10
+flask-swagger-ui==4.11.1
 gunicorn==23.0.0
 importlib_metadata==8.5.0
 iniconfig==2.0.0
